adapt contribs to double time bins